src/objects/echosign_dev1__SIGN_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>AppRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to app request</description>
        <label>Application Request</label>
        <referenceTo>Application_Request__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <description>Power of 1 for reporting (basic count)</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <formula>echosign_dev1__Opportunity__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Ext__c</fullName>
        <formula>echosign_dev1__Opportunity__r.Owner.Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Ext</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Fax__c</fullName>
        <formula>echosign_dev1__Opportunity__r.Owner.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <formula>echosign_dev1__Opportunity__r.Owner.FirstName +&quot; &quot;+ echosign_dev1__Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Phone__c</fullName>
        <formula>echosign_dev1__Opportunity__r.Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Title__c</fullName>
        <formula>echosign_dev1__Opportunity__r.Owner.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Title</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Agreements_Out_For_Signature</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Opportunity__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>echosign_dev1__DateSent__c</columns>
        <columns>echosign_dev1__StatusVisible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>echosign_dev1__StatusVisible__c</field>
            <operation>equals</operation>
            <value>Out for Signature</value>
        </filters>
        <label>Agreements Out For Signature</label>
    </listViews>
    <listViews>
        <fullName>Blank_Recipients</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Opportunity__c</columns>
        <columns>echosign_dev1__StatusVisible__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>echosign_dev1__Recipient__c</columns>
        <columns>echosign_dev1__DateSentDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Rep_Name__c</field>
            <operation>equals</operation>
            <value>Ryan Maguire</value>
        </filters>
        <label>Ryan Maguire</label>
    </listViews>
    <listViews>
        <fullName>Blank_Recipients2</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Opportunity__c</columns>
        <columns>echosign_dev1__StatusVisible__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>echosign_dev1__Recipient__c</columns>
        <columns>echosign_dev1__DateSentDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>echosign_dev1__Recipient__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Sales_Rep_Name__c</field>
            <operation>notEqual</operation>
            <value>Renee MacGregor</value>
        </filters>
        <label>Blank Recipients</label>
    </listViews>
    <listViews>
        <fullName>Conoco_Philips_Team</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Status__c</columns>
        <columns>echosign_dev1__Enable_Hosted_Signing__c</columns>
        <columns>echosign_dev1__Opportunity__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Rep_Name__c</field>
            <operation>equals</operation>
            <value>Landon Fielder</value>
        </filters>
        <filters>
            <field>Sales_Rep_Name__c</field>
            <operation>equals</operation>
            <value>Jose Rivera</value>
        </filters>
        <filters>
            <field>Sales_Rep_Name__c</field>
            <operation>equals</operation>
            <value>Eric Rodriguez</value>
        </filters>
        <filters>
            <field>Sales_Rep_Name__c</field>
            <operation>equals</operation>
            <value>Aaron Strand</value>
        </filters>
        <filters>
            <field>Sales_Rep_Name__c</field>
            <operation>equals</operation>
            <value>Khanh Hoang</value>
        </filters>
        <label>Conoco Philips Team</label>
        <sharedTo>
            <role>CPRegionalSalesManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LDR_My_applications_declines</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Account__c</columns>
        <columns>echosign_dev1__Opportunity__c</columns>
        <columns>echosign_dev1__StatusVisible__c</columns>
        <columns>echosign_dev1__DateSent__c</columns>
        <columns>echosign_dev1__DateSigned__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>AppRequest__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>echosign_dev1__StatusVisible__c</field>
            <operation>contains</operation>
            <value>Declined</value>
        </filters>
        <label>LDR - My applications - declines</label>
        <language>en_US</language>
        <sharedTo>
            <role>Lead_Development_Role</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Agreements</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Opportunity__c</columns>
        <columns>echosign_dev1__DateSentDate__c</columns>
        <columns>echosign_dev1__DateViewedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>echosign_dev1__StatusVisible__c</field>
            <operation>contains</operation>
            <value>Signed AND Qualified</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>PSMITH</value>
        </filters>
        <label>Pams Open agreements</label>
        <language>en_US</language>
        <sharedTo>
            <group>InsideSales</group>
            <group>InsideSalesDataEntry</group>
            <group>InsideSalesManager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_applications_All</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Account__c</columns>
        <columns>echosign_dev1__Opportunity__c</columns>
        <columns>echosign_dev1__StatusVisible__c</columns>
        <columns>echosign_dev1__DateSent__c</columns>
        <columns>echosign_dev1__DateSigned__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>echosign_dev1__StatusVisible__c</field>
            <operation>contains</operation>
            <value>Signed</value>
        </filters>
        <label>My applications - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sent_Drafts</fullName>
        <columns>NAME</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>echosign_dev1__Opportunity__c</columns>
        <columns>echosign_dev1__DateSent__c</columns>
        <columns>echosign_dev1__DateSigned__c</columns>
        <columns>echosign_dev1__StatusVisible__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>echosign_dev1__DateViewed__c</columns>
        <columns>echosign_dev1__Document__c</columns>
        <columns>echosign_dev1__Document_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>echosign_dev1__StatusVisible__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>5/20/2015 12:00 AM</value>
        </filters>
        <label>Sent Drafts on 5/20</label>
    </listViews>
    <listViews>
        <fullName>Sent_TODAY_MyAgreements</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Opportunity__c</columns>
        <columns>echosign_dev1__DateSent__c</columns>
        <columns>echosign_dev1__DateSigned__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>echosign_dev1__StatusVisible__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>echosign_dev1__DateSentDate__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Sent TODAY (My Agreements)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sent_This_Week</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Opportunity__c</columns>
        <columns>echosign_dev1__StatusVisible__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>echosign_dev1__DateViewedDate__c</columns>
        <columns>echosign_dev1__DateSentDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>echosign_dev1__DateSentDate__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>JCORK</value>
        </filters>
        <label>Sent This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Signed_Last3Days</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Opportunity__c</columns>
        <columns>echosign_dev1__DateSent__c</columns>
        <columns>echosign_dev1__DateSigned__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>echosign_dev1__StatusVisible__c</columns>
        <columns>echosign_dev1__Document__c</columns>
        <columns>echosign_dev1__DateSignedDate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>echosign_dev1__StatusVisible__c</field>
            <operation>equals</operation>
            <value>Signed</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:4</value>
        </filters>
        <label>Signed Last 3 Days</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Signed_since_615</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Opportunity__c</columns>
        <columns>echosign_dev1__DateSent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>echosign_dev1__StatusVisible__c</field>
            <operation>equals</operation>
            <value>Signed</value>
        </filters>
        <filters>
            <field>echosign_dev1__DateSignedDate__c</field>
            <operation>greaterThan</operation>
            <value>6/19/2014</value>
        </filters>
        <label>Signed since 6/15</label>
    </listViews>
    <validationRules>
        <fullName>Partner_Code_required_for_TriBrand</fullName>
        <active>true</active>
        <description>Partner Code is a required field for Enterprise Tribrand</description>
        <errorConditionFormula>AND(
BEGINS( echosign_dev1__Opportunity__r.Program_Name__c,&quot;Enterprise Tri Brand&quot;),
ISBLANK( echosign_dev1__Opportunity__r.Partner_Code__c ))</errorConditionFormula>
        <errorMessage>Partner Code on Opportunity must be: 4 char Branch Code[SPACE]3 Rep initials. 
Close this window and return to Opportunity to correct.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_Code_required_for_TriBrand_CT</fullName>
        <active>true</active>
        <description>Partner Code is a required field for Enterprise Tribrand Commercial Truck</description>
        <errorConditionFormula>AND(
BEGINS( echosign_dev1__Opportunity__r.Program_Name__c,&quot;Ent Comm Truck&quot;),
ISBLANK( echosign_dev1__Opportunity__r.Partner_Code__c ))</errorConditionFormula>
        <errorMessage>Partner Code on Opportunity must be 4 character Branch Code. 
Close this window and return to Opportunity to correct.</errorMessage>
    </validationRules>
</CustomObject>